# PuzzleGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindSOIL2.cmake
dependencies/SOIL2/lib/: soil2.lib
dependencies/assimp/include/assimp/: postprocess.h
dependencies/assimp/lib/: assimp.exp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/objects/backpack/: source_attribution.txt
resources/objects/block/: marble.dds  transparentblock.mtl  window.dds
resources/objects/block2/: marble.dds  window2.dds
resources/objects/blocks/bridge/lod_1/: bridge.blend  bridge.mtl
resources/objects/blocks/bridge/lod_2/: wood.dds
resources/objects/blocks/cube_grass_center/: cube_grass_center.blend  cube_grass_center.mtl
resources/objects/blocks/cube_grass_center_bottom/: cube_grass_center_bottom.blend  cube_grass_center_bottom.mtl
resources/objects/blocks/cube_grass_corner/: cube_grass_corner.blend  cube_grass_corner.mtl
resources/objects/blocks/cube_grass_corner_bottom/: cube_grass_corner_bottom.blend  cube_grass_corner_bottom.mtl
resources/objects/blocks/cube_grass_corner_single/: cube_grass_corner_single.blend  cube_grass_corner_single.mtl  dirt_3.dds
resources/objects/blocks/cube_grass_side/: cube_grass_side.blend  cube_grass_side.mtl  dirt_2.dds  grass.dds
resources/objects/blocks/cube_grass_side_bottom/: cube_grass_side_bottom.blend  cube_grass_side_bottom.mtl  dirt_1.dds
resources/objects/blocks/cube_grass_side_single/: cube_grass_side_single.blend  cube_grass_side_single.mtl
resources/objects/blocks/fire_corner/lod_1/: fire.dds  fire_corner.blend
resources/objects/blocks/fire_corner/lod_2/: fire.dds  fire_corner.mtl
resources/objects/blocks/water_center/lod_1/: water.dds  water_center.blend  water_center.mtl
resources/objects/blocks/water_center/lod_2/: water.dds
resources/objects/enemy/lod_1/: black.dds  enemy.blend  enemy.mtl  red.dds
resources/objects/enemy/lod_2/: enemy.mtl  red_solid.dds
resources/objects/player/lod_1/: player.blend
resources/objects/player/lod_2/: blue_2.dds  creme.dds  player.mtl
resources/objects/player/lod_3/: player.mtl
resources/objects/player/lod_4/: blue.dds  eye.dds  white.dds
resources/objects/skybox/: skybox.blend  skybox.mtl
resources/objects/star/lod_1/: green.dds  star.blend
resources/objects/star/lod_2/: green.dds  star.mtl
src/: main.cpp
src/engine/camera/: camera.cpp  camera.h
src/engine/collision/: boundingbox.cpp  boundingbox.h
src/engine/factory/: InstanceFactory.cpp  InstanceFactory.h
src/engine/instance/: instance.cpp  instance.h
src/engine/model/: lodmodel.cpp  lodmodel.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.h  simplemodel.cpp  simplemodel.h  triangle.cpp  triangle.h
src/engine/renderer/: renderer.cpp  renderer.h
src/engine/state/: mouse.cpp  mouse.h  state.cpp  state.h
src/engine/window/: window.cpp  window.h
src/game/: BlockInstance.cpp  BlockInstance.h  DemoGame.cpp  DemoGame.h  GameBasis.h  Player.cpp  Player.h  PuzzleGame.cpp  PuzzleGame.h
src/game/demo/: DemoGame.cpp  DemoGame.h
src/game/instances/: BlockInstance.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/game/level/: PuzzleGameLevel.cpp  PuzzleGameLevel.h
src/utils/: camera.h  mesh.h  model.h  print.h  shader.h  stringutils.h
